Fix calendar nav overlap issue, start work on season notifications

--- a/reserver/static/reserver/styles/gunnerus.css
+++ b/reserver/static/reserver/styles/gunnerus.css
@@ -424,6 +424,13 @@ input[type=checkbox]:checked:after {
 }
 
 /* calendar css */
+.calendar .panel-heading.nav .pull-left {
+	margin-bottom: 6px;
+}
+
+.calendar .panel-heading.nav .pull-right.btn-toolbar {
+	margin-top: 1px;
+}
 
 .calendar .row {
 	overflow: hidden;
